# modpack-ai

./: .env.example  .gitignore  README.md  pyproject.toml
modpack/: __init__.py  main.py  modpack.py
modpack/config/: settings.py
modpack/data/: dataset_creator.py  modrinth_scraper.py
modpack/models/: schemas.py
modpack/training/: llama_trainer.py
