[tool.poetry]
name = "modpack-ai"
version = "0.1.0"
description = "LLaMA 3 fine-tuned model for generating Minecraft modpacks"
authors = ["Charlotte <charlottewiltshire27@outlook.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pydantic = "^2.11.7"
torch = "^2.8.0"
transformers = "^4.55.2"
datasets = "^4.0.0"
accelerate = "^1.10.0"
peft = "^0.17.0"
bitsandbytes = "^0.47.0"
requests = "^2.32.4"
beautifulsoup4 = "^4.13.4"
aiohttp = "^3.12.15"
asyncio = "^4.0.0"
tqdm = "^4.67.1"
loguru = "^0.7.3"
numpy = "^2.3.2"
pandas = "^2.3.1"
click = "^8.2.1"
pydantic-settings = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
